// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValidationError /> dark: renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#fcfcfc",
        "fontFamily": "Open Sans",
      },
      Array [
        Object {
          "color": "#f25c74",
          "fontSize": 12,
        },
        undefined,
      ],
    ]
  }
/>
`;

exports[`<ValidationError /> light: renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "Open Sans",
      },
      Array [
        Object {
          "color": "#f25c74",
          "fontSize": 12,
        },
        undefined,
      ],
    ]
  }
/>
`;

exports[`<ValidationError /> renders component when passed in 1`] = `
<Styled(Text)>
  <Component />
</Styled(Text)>
`;

exports[`<ValidationError /> renders text when passed in 1`] = `
<Styled(Text)>
  Test
</Styled(Text)>
`;
